stable/iap-controller/config/esp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE}-esp
  namespace: ${NAMESPACE}
  annotations:
    "iapingresses.ctl.isla.solutions/host": "${HOST}"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ${SERVICE}-esp
  type: NodePort
